--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
       </nav><!-- .navbar -->
 
       <div class="social-links">
-        <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
-        <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-        <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-        <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+        <a href="https://twitter.com/MalikWaleed007" class="twitter"><i class="bi bi-twitter"></i></a>
+        <a href="https://www.facebook.com/malik.waleed0077" class="facebook"><i class="bi bi-facebook"></i></a>
+        <a href="https://www.instagram.com/malik.waleed.bilal" class="instagram"><i class="bi bi-instagram"></i></a>
+        <a href="https://www.linkedin.com/in/malikwaleed007" class="linkedin"><i class="bi bi-linkedin"></i></a>
       </div>
 
     </div>
