--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             <div class="col-lg-6">
               <ul>
                 <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>28 September 2002</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>https://malikwaleed007.github.io/</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span><a href="https://malikwaleed007.github.io">waleed.me</a></span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+91 7006 947 607</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Islamabad, Kashmir</span></li>
               </ul>
