--- a/index.html
+++ b/index.html
@@ -80,8 +80,7 @@
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
           <h3>Full Stack developer &amp; Web Designer</h3>
           <p class="fst-italic">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-            magna aliqua.
+            I am currently in the second year of BCA in Presidency College,Bangalore
           </p>
           <div class="row">
             <div class="col-lg-6">
