--- a/index.html
+++ b/index.html
@@ -45,14 +45,15 @@
           <li><a class="nav-link active" href="#header">Home</a></li>
           <li><a class="nav-link" href="#about">About</a></li>
           <li><a class="nav-link" href="#resume">Resume</a></li>
-          <li><a class="nav-link" href="#services">Services</a></li>
-          <li><a class="nav-link" href="#portfolio">Portfolio</a></li>
+          <li><a class="nav-link" href="#services">Projects</a></li>
+          <!-- <li><a class="nav-link" href="#portfolio">Portfolio</a></li> -->
           <li><a class="nav-link" href="#contact">Contact</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
 
       <div class="social-links">
+        <a href="https://github.com/malikwaleed007" class="github"><i class="bi bi-github"></i></a>
         <a href="https://twitter.com/MalikWaleed0077" class="twitter"><i class="bi bi-twitter"></i></a>
         <a href="https://www.facebook.com/malik.waleed0077" class="facebook"><i class="bi bi-facebook"></i></a>
         <a href="https://www.instagram.com/malik.waleed.bilal" class="instagram"><i class="bi bi-instagram"></i></a>
@@ -95,7 +96,7 @@
               <ul>
                 <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>20</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Bachelor of Computer Applications</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>PhEmailone:</strong> <span>malik.waleed95@gmail.com</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>malik.waleed95@gmail.com</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
               </ul>
             </div>
@@ -394,60 +395,73 @@
 
       <div class="row">
         <div class="col-lg-6">
-          <h3 class="resume-title">Sumary</h3>
+          <h3 class="resume-title">Languages</h3>
           <div class="resume-item pb-0">
-            <h4>Alice Barkley</h4>
-            <p><em>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and developing user-centered digital/print marketing material from initial concept to final, polished deliverable.</em></p>
+            <h4>Well versed in</h4>
+            <p><em></em></p>
             <p>
             <ul>
-              <li>Portland par 127,Orlando, FL</li>
-              <li>(123) 456-7891</li>
-              <li>alice.barkley@example.com</li>
+              <li>English</li>
+              <li>Kashmiri</li>
+              <li>Urdu</li>
+              <li>Hindi</li>
+              <li>French</li>
             </ul>
             </p>
           </div>
 
           <h3 class="resume-title">Education</h3>
           <div class="resume-item">
-            <h4>Master of Fine Arts &amp; Graphic Design</h4>
-            <h5>2015 - 2016</h5>
-            <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-            <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p>
+            <h4>Bachelor of Computer Applications</h4>
+            <h5>2021 - 2023</h5>
+            <p><em>Presidency Group Of Instituions, Bangalore, Karnataka</em></p>
+            <p></p>
           </div>
           <div class="resume-item">
-            <h4>Bachelor of Fine Arts &amp; Graphic Design</h4>
-            <h5>2010 - 2014</h5>
-            <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-            <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p>
+            <h4>Higher Secondary Education</h4>
+            <h5>2019 - 2020</h5>
+            <p><em>H.I.S.T.A. Higher Secondary School, Anantnag, Kashmir</em></p>
+            <p></p>
+          </div>
+          <div class="resume-item">
+            <h4>High School</h4>
+            <h5>2006 - 2018</h5>
+            <p><em>Saint Luke's Convent School, Anantnag, Kashmir</em></p>
+            <p></p>
           </div>
         </div>
         <div class="col-lg-6">
-          <h3 class="resume-title">Professional Experience</h3>
+          <h3 class="resume-title">Professional Experience and Certifications</h3>
           <div class="resume-item">
-            <h4>Senior graphic design specialist</h4>
-            <h5>2019 - Present</h5>
-            <p><em>Experion, New York, NY </em></p>
-            <p>
+            <h4>Python for everybody</h4>
+            <h5>2022 </h5>
+            <p><em>University of Michigan through Coursera </em></p>
+            <!-- <p>
             <ul>
               <li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
               <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>
               <li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the design</li>
               <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li>
             </ul>
-            </p>
+            </p> -->
           </div>
           <div class="resume-item">
-            <h4>Graphic design specialist</h4>
-            <h5>2017 - 2018</h5>
-            <p><em>Stepping Stone Advertising, New York, NY</em></p>
-            <p>
+            <h4>Modern HTML and CSS</h4>
+            <h5>2020</h5>
+            <p><em>Udemy</em></p>
+            <!-- <p>
             <ul>
               <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
               <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
               <li>Recommended and consulted with clients on the most appropriate graphic design</li>
               <li>Created 4+ design presentations and proposals a month for clients and account managers</li>
             </ul>
-            </p>
+            </p> -->
+          </div>
+          <div class="resume-item">
+            <h4>The Complete Wordpress course</h4>
+            <h5>2020</h5>
+            <p><em>Udemy</em></p>
           </div>
         </div>
       </div>
@@ -460,56 +474,56 @@
     <div class="container">
 
       <div class="section-title">
-        <h2>Services</h2>
-        <p>My Services</p>
+        <h2>Projects</h2>
+        <p>My Work</p>
       </div>
 
       <div class="row">
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
           <div class="icon-box">
-            <div class="icon"><i class="bx bxl-dribbble"></i></div>
-            <h4><a href="">Lorem Ipsum</a></h4>
-            <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
+            <div class="icon"><i class="bx bx-world"></i></div>
+            <h4><a href="https://kathroogroup.com/">KATHROOGROUP</a></h4>
+            <p>Portfolio website for The Kathroo Group</p>
           </div>
         </div>
 
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0">
           <div class="icon-box">
-            <div class="icon"><i class="bx bx-file"></i></div>
-            <h4><a href="">Sed ut perspiciatis</a></h4>
-            <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore</p>
+            <div class="icon"><i class="bx bx-world"></i></div>
+            <h4><a href="https://mjcustomsjk.com/">MJCUSTOMS</a></h4>
+            <p>Online Service Booking for Motoshop</p>
           </div>
         </div>
 
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
           <div class="icon-box">
-            <div class="icon"><i class="bx bx-tachometer"></i></div>
-            <h4><a href="">Magni Dolores</a></h4>
-            <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia</p>
+            <div class="icon"><i class="bx bx-world"></i></div>
+            <h4><a href="https://sanztesamaan.com/">Sanztesamaan</a></h4>
+            <p>e-Commerce site for clothing shop(woo-commerce)</p>
           </div>
         </div>
 
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
           <div class="icon-box">
             <div class="icon"><i class="bx bx-world"></i></div>
-            <h4><a href="">Nemo Enim</a></h4>
-            <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis</p>
+            <h4><a href="">AlifEDU</a></h4>
+            <p>School Website for Alif Educational Institute</p>
           </div>
         </div>
 
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
           <div class="icon-box">
-            <div class="icon"><i class="bx bx-slideshow"></i></div>
-            <h4><a href="">Dele cardo</a></h4>
-            <p>Quis consequatur saepe eligendi voluptatem consequatur dolor consequuntur</p>
+            <div class="icon"><i class="bx bx-world"></i></div>
+            <h4><a href="">WaleedTakPhotography</a></h4>
+            <p>Portfolio website for Photographer</p>
           </div>
         </div>
 
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
           <div class="icon-box">
-            <div class="icon"><i class="bx bx-arch"></i></div>
-            <h4><a href="">Divera don</a></h4>
-            <p>Modi nostrum vel laborum. Porro fugit error sit minus sapiente sit aspernatur</p>
+            <div class="icon"><i class="bx bx-world"></i></div>
+            <h4><a href="">HomesAndBeyond</a></h4>
+            <p>Portfolio of Home Decor and Hardware Store</p>
           </div>
         </div>
 
@@ -677,7 +691,7 @@
 
       <div class="section-title">
         <h2>Contact</h2>
-        <p>Contact Me</p>
+        <p>Work with Me</p>
       </div>
 
       <div class="row mt-2">
@@ -686,7 +700,7 @@
           <div class="info-box">
             <i class="bx bx-map"></i>
             <h3>My Address</h3>
-            <p>A108 Adam Street, New York, NY 535022</p>
+            <p>New Qazi Bagh, Anantnag, Kashmir 192101</p>
           </div>
         </div>
 
@@ -695,11 +709,11 @@
             <i class="bx bx-share-alt"></i>
             <h3>Social Profiles</h3>
             <div class="social-links">
-              <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
-              <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-              <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-              <a href="#" class="google-plus"><i class="bi bi-skype"></i></a>
-              <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+              <a href="https://twitter.com/MalikWaleed0077" class="twitter"><i class="bi bi-twitter"></i></a>
+              <a href="https://github.com/malikwaleed007" class="github"><i class="bi bi-github"></i></a>
+              <a href="https://www.facebook.com/malik.waleed0077" class="facebook"><i class="bi bi-facebook"></i></a>
+              <a href="https://www.instagram.com/malik.waleed.bilal" class="instagram"><i class="bi bi-instagram"></i></a>
+              <a href="https://www.linkedin.com/in/malikwaleed007" class="linkedin"><i class="bi bi-linkedin"></i></a>
             </div>
           </div>
         </div>
@@ -708,14 +722,14 @@
           <div class="info-box">
             <i class="bx bx-envelope"></i>
             <h3>Email Me</h3>
-            <p>contact@example.com</p>
+            <p>malik.waleed95@gmail.com</p>
           </div>
         </div>
         <div class="col-md-6 mt-4 d-flex align-items-stretch">
           <div class="info-box">
             <i class="bx bx-phone-call"></i>
             <h3>Call Me</h3>
-            <p>+1 5589 55488 55</p>
+            <p>+91 7006 947 607</p>
           </div>
         </div>
       </div>
