--- a/index.html
+++ b/index.html
@@ -522,7 +522,7 @@
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
           <div class="icon-box">
             <div class="icon"><i class="bx bx-world"></i></div>
-            <h4><a href="">AlifEDU</a></h4>
+            <h4><a href="https://alifedu.in/">AlifEDU</a></h4>
             <p>School Website for Alif Educational Institute</p>
           </div>
         </div>
@@ -538,8 +538,8 @@
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
           <div class="icon-box">
             <div class="icon"><i class="bx bx-world"></i></div>
-            <h4><a href="">HomesAndBeyond</a></h4>
-            <p>Portfolio of Home Decor and Hardware Store</p>
+            <h4><a href="https://thewoodstay.in/">TheWoodStay</a></h4>
+            <p>Hotel Management and Booking</p>
           </div>
         </div>
 
