--- a/index.html
+++ b/index.html
@@ -122,16 +122,16 @@
 
         <div class="col-lg-3 col-md-6">
           <div class="count-box">
-            <i class="bi bi-emoji-smile"></i>
-            <span data-purecounter-start="0" data-purecounter-end="10" data-purecounter-duration="1"
+            <!-- <i class="bi bi-emoji-smile"></i> -->
+            <span data-purecounter-start="0" data-purecounter-end="3" data-purecounter-duration="1"
               class="purecounter"></span>
-            <p>Happy Clients</p>
+            <p>Internships</p>
           </div>
         </div>
 
         <div class="col-lg-3 col-md-6 mt-5 mt-md-0">
           <div class="count-box">
-            <i class="bi bi-journal-richtext"></i>
+            <!-- <i class="bi bi-journal-richtext"></i> -->
             <span data-purecounter-start="0" data-purecounter-end="7" data-purecounter-duration="1"
               class="purecounter"></span>
             <p>Projects</p>
@@ -140,16 +140,16 @@
 
         <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
           <div class="count-box">
-            <i class="bi bi-headset"></i>
-            <span data-purecounter-start="0" data-purecounter-end="350" data-purecounter-duration="1"
+            <!-- <i class="bi bi-headset"></i> -->
+            <span data-purecounter-start="0" data-purecounter-end="5" data-purecounter-duration="1"
               class="purecounter"></span>
-            <p>Hours Of Support</p>
+            <p>Languages Learned</p>
           </div>
         </div>
 
         <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
           <div class="count-box">
-            <i class="bi bi-award"></i>
+            <!-- <i class="bi bi-award"></i> -->
             <span data-purecounter-start="0" data-purecounter-end="10" data-purecounter-duration="1"
               class="purecounter"></span>
             <p>Awards</p>
