--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Portfolio</title>
+  <title>Personal Portfolio</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -102,13 +102,14 @@
                     Applications</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>malik.waleed95@gmail.com</span>
                 </li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Freelancer</strong> <span></span></li>
               </ul>
             </div>
           </div>
           <p>
-            I am a 2nd year CS student at Presidency College Bangalore. Looking for new challenges and experiences. I
-            love working on Technology. Currently exploring JavaScript.
+            I am a 2nd year CS student at Presidency College Bangalore.<br>Looking for new challenges and experiences
+            everyday.<br>I
+            love working with Technology.<br>I am currently exploring JavaScript and GIT.
           </p>
         </div>
       </div>
