--- a/index.html
+++ b/index.html
@@ -100,7 +100,8 @@
                 <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>20</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Bachelor of Computer
                     Applications</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>malik.waleed95@gmail.com</span>
+                <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong>
+                  <span>mailto:malik.waleed95@gmail.com</span>
                 </li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Freelancer</strong> <span></span></li>
               </ul>
@@ -777,7 +778,7 @@
           <div class="info-box">
             <i class="bx bx-envelope"></i>
             <h3>Email Me</h3>
-            <p>malik.waleed95@gmail.com</p>
+            <p>mailto:malik.waleed95@gmail.com</p>
           </div>
         </div>
         <div class="col-md-6 mt-4 d-flex align-items-stretch">
