--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
       <h1><a href="index.html">Waleed Bilal</a></h1>
       <!-- <a href="index.html" class="mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a> -->
-      <h2>I'm a passionate <span>developer</span> from Kashmir</h2>
+      <h2>Building the bridges between art, code, and impact.</h2>
 
       <nav id="navbar" class="navbar">
         <ul>
@@ -81,7 +81,7 @@
           <img src="assets/img/me.jpg" class="img-fluid" alt="">
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-          <h3>Full Stack developer &amp; Web Designer</h3>
+          <h3>Full Stack Developer &amp; Web Designer</h3>
           <!-- <p class="fst-italic">
             I am currently in the second year of BCA in Presidency College,Bangalore
           </p>-->
@@ -89,8 +89,8 @@
             <div class="col-lg-6">
               <ul>
                 <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>28 September 2002</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span><a
-                      href="https://malikwaleed007.github.io">waleed.me</a></span></li>
+<!--                 <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span><a
+                      href="https://malikwaleed007.github.io">waleed.me</a></span></li> -->
                 <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+91 7006 947 607</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Islamabad, Kashmir</span></li>
               </ul>
@@ -106,10 +106,8 @@
               </ul>
             </div>
           </div>
-          <p>
-            I am a 2nd year CS student at Presidency College Bangalore.<br>Looking for new challenges and experiences
-            everyday.<br>I
-            love working with Technology.<br>I am currently exploring JavaScript and GIT.
+          <h3>Journey</h3>
+          <p>I hold a degree in Computer Science from Presidency College, Bangalore, where I cultivated a strong foundation in software development and problem-solving. My journey in technology began with a fascination for creating meaningful solutions through code, and it continues as I push boundaries in web development and software engineering.
           </p>
         </div>
       </div>
