--- a/index.html
+++ b/index.html
@@ -97,12 +97,12 @@
             </div>
             <div class="col-lg-6">
               <ul>
-                <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>20</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>22</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Bachelor of Computer
                     Applications</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>malik.waleed95@gmail.com</span>
                 </li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Freelancer</strong> <span></span></li>
+<!--                 <li><i class="bi bi-chevron-right"></i> <strong>Freelancer</strong> <span></span></li> -->
               </ul>
             </div>
           </div>
@@ -421,7 +421,7 @@
 
       <div class="section-title">
         <h2>Resume</h2>
-        <p>Check My Resume
+        <p>Learn About My Expertise
         <h4><a href="https://drive.google.com/file/d/1Kaxab5VO9l0NIvKiS_4cdaN7eyuY2m9V/view?usp=drive_link">Click here
             for full resume</a></h4>
         </p>
@@ -439,7 +439,6 @@
               <li>Kashmiri</li>
               <li>Urdu</li>
               <li>Hindi</li>
-              <li>French</li>
             </ul>
             </p>
           </div>
@@ -447,7 +446,7 @@
           <h3 class="resume-title">Education</h3>
           <div class="resume-item">
             <h4>Bachelor of Computer Applications</h4>
-            <h5>2021 - 2023</h5>
+            <h5>2021 - 2024</h5>
             <p><em>Presidency Group Of Instituions, Bangalore, Karnataka</em></p>
             <p></p>
           </div>
